Fixed bug that caused sub-menu links not to work on the mobile nav bar. Fixed an issue that caused the sub-menu not to align properly

--- a/assets/css/navigation-bar.css
+++ b/assets/css/navigation-bar.css
@@ -34,6 +34,7 @@
 .menu .sub-menu a { padding: 10px 15px; }
 .menu .sub-menu li:hover { background-color: rgba(0,0,0,0.05); }
 
+/* MOBILE VERSION */
 .mobile-sitenav {
 	font-size: 26px;
 	padding: 20px 25px;
@@ -57,7 +58,7 @@
 .mobile-menu .sub-menu {
 	display: none;
 	position: absolute;
-	left: 180px;
+	left: 35%;
 	top: 30px;
 }
 .mobile-menu .sub-menu.show { display: inline-block; }
@@ -93,5 +94,4 @@
 		padding: 20px;
 	}
 	.mobile-sitenav > button { right: 15px; }
-	.mobile-menu .sub-menu { left: 140px; }
 }
